--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,7 @@ tomli = "*"
 typing-extensions = "*"
 dill = "*"
 numpy = "*"
-mediapipe = "*"
+mediapipe = "==0.10.8"
 tensorflow = "*"
 flask = "*"
 certifi = "*"
@@ -18,6 +18,8 @@ pymongo = "*"
 python-dotenv = "*"
 pytest = "*"
 pytest-mongo = "*"
+pip = "*"
+install = "*"
 
 [dev-packages]
 
