--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,7 @@ tomli = "*"
 typing-extensions = "*"
 dill = "*"
 numpy = "*"
-mediapipe = "==0.10.8"
+mediapipe = "*"
 tensorflow = "*"
 flask = "*"
 certifi = "*"
