--- a/.github/workflows/Main.yaml
+++ b/.github/workflows/Main.yaml
@@ -18,12 +18,13 @@ jobs:
             python -m pip install --upgrade pip
             pip install --user pipenv
             pipenv --python ${{ matrix.python-version }}
-            pipenv install pytest 
+            pipenv run python -m pip install pytest
             pipenv install
       - name: Turn on 'editable' mode
         run: |
           pipenv install -e .
       - name: Test with pytest
         run: |
-          cd $GITHUB_WORKSPACE/web_app/tests  
+          cd $GITHUB_WORKSPACE/web_app  
           pipenv run python -m pytest
+          pipenv run python -m coverage report --include=**/*.py --fail-under=80
