--- a/.github/workflows/Main.yaml
+++ b/.github/workflows/Main.yaml
@@ -18,7 +18,7 @@ jobs:
             python -m pip install --upgrade pip
             pip install --user pipenv
             pipenv --python ${{ matrix.python-version }}
-            pipenv run python -m pip install pytest
+            pipenv install pytest
             pipenv install
       - name: Turn on 'editable' mode
         run: |
