--- a/.github/workflows/Main.yaml
+++ b/.github/workflows/Main.yaml
@@ -28,4 +28,5 @@ jobs:
         run: |
           cd $GITHUB_WORKSPACE/web_app  
           pipenv run python -m pytest
-          pipenv run python -m pytest --cov-report=xml --cov-fail-under=80
+          pipenv run python -m pytest --cov-report xml --cov-fail-under=80
+
