--- a/web_app/Dockerfile
+++ b/web_app/Dockerfile
@@ -1,13 +1,17 @@
 FROM python:3.8-slim-buster
 
-WORKDIR /app
+WORKDIR /web_app
+
+COPY . .
 
 COPY requirements.txt ./
+
+RUN pip install --upgrade pip
+
 RUN pip install -r requirements.txt
 
-ADD . .
+EXPOSE 5000
 
-EXPOSE 8000
+CMD ["python3", "-m", "flask", "run", "--host=0.0.0.0", "--port=5000"]
 
-CMD ["python3", "-m", "flask", "run", "--host=0.0.0.0"]
 
