--- a/machine_learning_client/Dockerfile
+++ b/machine_learning_client/Dockerfile
@@ -2,15 +2,11 @@ FROM python:3.8-slim
 
 WORKDIR /machine_learning_client
 
-COPY . /app
+COPY machine_learning_client/ ./
 
-COPY requirements.txt ./
-
-RUN pip install --upgrade pip
-
-RUN pip install -r requirements.txt
+RUN pip install --upgrade pip \
+    && pip install -r requirements.txt && apt-get update && apt-get install ffmpeg libsm6 libxext6  -y
 
 EXPOSE 80
 
 CMD ["python", "setup.py"]
-
