--- a/machine_learning_client/requirements.txt
+++ b/machine_learning_client/requirements.txt
@@ -1,4 +1,6 @@
 opencv-python==4.8.1.78
 numpy==1.24.2
-mediapipe==0.9.0.1
+mediapipe==0.10.8
 tensorflow==2.13.1
+certifi==2021.5.30
+pymongo==4.6.1
