--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - "8080:5000"
     depends_on:
       - mongodb
+      - machine_learning_client
     environment:
       FLASK_APP: web_app/app.py
 
@@ -18,7 +19,9 @@ services:
     ports:
       - "80:80"
     depends_on:
-      - web_app
+      - mongodb
+    environment:
+      FLASK_APP: machine_learning_client/app.py
 
   mongodb:
     image: mongo
