--- a/machine_learning_client/Dockerfile
+++ b/machine_learning_client/Dockerfile
@@ -7,6 +7,6 @@ COPY machine_learning_client/ ./
 RUN pip install --upgrade pip \
     && pip install -r requirements.txt && apt-get update && apt-get install ffmpeg libsm6 libxext6  -y
 
-EXPOSE 80
+EXPOSE 9090
 
-CMD ["python3", "-m", "flask", "run", "--host=0.0.0.0"]
+CMD ["python3", "-m", "flask", "run", "--host=0.0.0.0", "--port=9090"]
