--- a/web_app/requirements.txt
+++ b/web_app/requirements.txt
@@ -3,6 +3,7 @@ click==8.1.7
 dnspython==2.4.2
 Flask==3.0.0
 Flask-PyMongo==2.3.0
+Flask-Cors==4.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
