--- a/Pipfile
+++ b/Pipfile
@@ -6,21 +6,75 @@ name = "pypi"
 [packages]
 pylint = "*"
 black = "*"
-tomli = "*"
-typing-extensions = "*"
+tomli = "==2.0.1"
+typing-extensions = "==3.6.6"
 dill = "*"
-numpy = "*"
-mediapipe = "*"
-tensorflow = "*"
-flask = "*"
-certifi = "*"
-pymongo = "*"
+numpy = ">=1.22"
+mediapipe = "==0.9.3.0"
+tensorflow = "==2.13.1"
+flask = "==3.0.0"
+certifi = "==2023.11.17"
+pymongo = "==4.6.0"
 python-dotenv = "*"
 pytest = "*"
 pytest-mongo = "*"
 pip = "*"
 install = "*"
-flask-cors = "*"
+flask-cors = "==4.0.0"
+absl-py = "==2.0.0"
+astunparse = "==1.6.3"
+attrs = "==23.1.0"
+blinker = "==1.7.0"
+cachetools = "==5.3.2"
+cffi = "==1.16.0"
+charset-normalizer = "==3.3.2"
+click = "==8.1.7"
+contourpy = "==1.1.1"
+cv = "==1.0.0"
+cycler = "==0.12.1"
+flatbuffers = "==23.5.26"
+fonttools = "==4.45.1"
+gast = "==0.2.1"
+google-auth = "==2.23.4"
+google-auth-oauthlib = "==1.0.0"
+google-pasta = "==0.2.0"
+grpcio = "==1.59.3"
+h5py = "==3.10.0"
+idna = "==3.6"
+itsdangerous = "==2.1.2"
+jinja2 = "==3.1.2"
+keras = "==2.13.1"
+kiwisolver = "==1.4.5"
+libclang = "==16.0.6"
+markdown = "==3.5.1"
+markupsafe = "==2.1.3"
+matplotlib = "==3.7.4"
+ml-dtypes = "==0.2.0"
+oauthlib = "==3.2.2"
+opencv-contrib-python = "==4.8.1.78"
+opencv-python = "==4.8.1.78"
+opt-einsum = "==3.3.0"
+packaging = "==23.2"
+pillow = "==10.1.0"
+protobuf = "==3.20.3"
+pyasn1 = "==0.5.1"
+pyasn1-modules = "==0.3.0"
+pycparser = "==2.21"
+pyparsing = "==3.1.1"
+python-dateutil = "==2.8.2"
+requests = "==2.31.0"
+requests-oauthlib = "==1.3.1"
+rsa = "==4.9"
+six = "==1.16.0"
+sounddevice = "==0.4.6"
+tensorboard = "==2.13"
+tensorboard-data-server = "==0.7.2"
+tensorflow-estimator = "==2.13.0"
+tensorflow-io-gcs-filesystem = "==0.34.0"
+termcolor = "==2.3.0"
+urllib3 = "==2.1.0"
+werkzeug = "==3.0.1"
+wrapt = "==1.14.1"
 
 [dev-packages]
 
