--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,7 @@ tomli = "*"
 typing-extensions = "*"
 dill = "*"
 numpy = "*"
-mediapipe = "==0.9.0.1"
+mediapipe = "0.9.0.1"
 flask-cors = "*"
 tensorflow = "*"
 flask = "*"
