--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,7 @@ tomli = "*"
 typing-extensions = "*"
 dill = "*"
 numpy = "*"
-mediapipe = "*"
+mediapipe = "0.9.0.1"
 flask-cors = "*"
 tensorflow = "*"
 flask = "*"
@@ -25,4 +25,4 @@ install = "*"
 [dev-packages]
 
 [requires]
-python_version = "3.7"
+python_version = "3.10"
